out/production/My Development Org/objects/bvd_connector__Log_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Settings used for the creation of the logs</description>
    <fields>
        <fullName>bvd_connector__Error__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Info__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bvd_connector__Warn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warn</label>
        <type>Checkbox</type>
    </fields>
    <label>Log Settings</label>
</CustomObject>